Removed API keys

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 	<title>WebRTC: Still photo capture demo</title>
 	<meta charset='utf-8'>
 	<link rel="stylesheet" href="main.css" type="text/css" media="all">
-	<script src="capture.js">
+	<script src="./capture.js">
 	</script>
 </head>
 <body>
