Add in index.html changes
Now includes AXIOS!

--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,17 @@
 <!doctype html>
 <html>
 <head>
-	<title>WebRTC: Still photo capture demo</title>
+	<title>“Against the Rage” Machine</title>
 	<meta charset='utf-8'>
 	<link rel="stylesheet" href="main.css" type="text/css" media="all">
+	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 	<script src="./capture.js">
 	</script>
 </head>
 <body>
 <div class="contentarea">
 	<h1>
-		MDN - WebRTC: Still photo capture demo
+		“Against the Rage” Machine
 	</h1>
 	<p>
 		This example demonstrates how to set up a media stream using your built-in webcam, fetch an image from that stream, and create a PNG using that image.
