Updated audio files

--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,8 @@
 			</div>
 		</div>
 	</div>
-	<script src="./capture.js"></script>
+  <script src="./capture.js"></script>
+  <script src="./index.js"></script>
 </body>
 
 </html>
