More integration of APIs

--- a/src/index.html
+++ b/src/index.html
@@ -61,6 +61,15 @@
 			</div>
 		</div>
 	</div>
+	<div class="modal closed">
+		<button class="close">&times</button>
+		<div class="inner">
+			<h2>
+				Take a break...
+			</h2>
+			<img src="https://source.unsplash.com/random?kitten,cute,funny" alt="">
+		</div>
+	</div>
   <script src="./capture.js"></script>
   <script src="./index.js"></script>
 </body>
